added desktop grid

--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Share Your Holiday Wish</title>
+    <title>Grid default page</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="css/spinetime.css" />
   </head>
   <body>
+
+  <div class="grid-container outline">
+      <div class="row">
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div> 
+          <div class="col-1"><p>col-1</p></div>
+      </div> 
+      <div class="row">
+          <div class="col-2"><p>col-2</p></div> 
+          <div class="col-2"><p>col-2</p></div> 
+          <div class="col-2"><p>col-2</p></div> 
+          <div class="col-2"><p>col-2</p></div> 
+          <div class="col-2"><p>col-2</p></div> 
+          <div class="col-2"><p>col-2</p></div> 
+      </div> 
+      <div class="row">
+          <div class="col-3"><p>col-3</p></div> 
+          <div class="col-3"><p>col-3</p></div> 
+          <div class="col-3"><p>col-3</p></div> 
+          <div class="col-3"><p>col-3</p></div> 
+      </div> 
+      <div class="row">
+        <div class="col-12"><p>col-12</p></div>
+      </div>
+  </div>
 
   </body>
 </html>
