--- a/index.html
+++ b/index.html
@@ -11,35 +11,41 @@
 
   <div class="grid-container outline">
       <div class="row">
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div> 
-          <div class="col-1"><p>col-1</p></div>
+          <div class="large-1 small-4"><p>small-4 large-1</p></div> 
+          <div class="large-1 small-4"><p>small-4 large-1</p></div> 
+          <div class="large-1 small-4"><p>small-4 large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div> 
+          <div class="large-1 show-for-large-only"><p>large-1</p></div>
       </div> 
       <div class="row">
-          <div class="col-2"><p>col-2</p></div> 
-          <div class="col-2"><p>col-2</p></div> 
-          <div class="col-2"><p>col-2</p></div> 
-          <div class="col-2"><p>col-2</p></div> 
-          <div class="col-2"><p>col-2</p></div> 
-          <div class="col-2"><p>col-2</p></div> 
+          <div class="large-2"><p>large-2</p></div> 
+          <div class="large-2"><p>large-2</p></div> 
+          <div class="large-2"><p>large-2</p></div> 
+          <div class="large-2"><p>large-2</p></div> 
+          <div class="large-2"><p>large-2</p></div> 
+          <div class="large-2"><p>large-2</p></div> 
       </div> 
       <div class="row">
-          <div class="col-3"><p>col-3</p></div> 
-          <div class="col-3"><p>col-3</p></div> 
-          <div class="col-3"><p>col-3</p></div> 
-          <div class="col-3"><p>col-3</p></div> 
+          <div class="large-3"><p>large-3</p></div> 
+          <div class="large-3"><p>large-3</p></div> 
+          <div class="large-3"><p>large-3</p></div> 
+          <div class="large-3"><p>large-3</p></div> 
       </div> 
       <div class="row">
-        <div class="col-12"><p>col-12</p></div>
+          <div class="large-5 small-3"><p>large-5</p></div> 
+          <div class="large-2 small-3"><p>large-2</p></div> 
+          <div class="large-3 small-3"><p>large-3</p></div> 
+          <div class="large-2 small-3"><p>large-2</p></div> 
+      </div> 
+      <div class="row">
+        <div class="large-12"><p>large-12</p></div>
       </div>
   </div>
 
